# 777-raid-bot

./: .gitignore  CONTRIBUTING.mdx  README.mdx  SETUP.mdx  config.json  data.database  gifs.txt  main.py  messages.jsonc  nuke.jsonc  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
cogs/: ping.py  say.py
commands/: about.py  customraid.py  flood.py  ghostping.py  interaction_raid.py  ping.py  presets.py  purge.py  raid.py  say.py  thug.py  userinfo.py  x.py
data/: data.db
data/jsonb/: 0.jsonb  289206530249719818.jsonb
data/lmdb/store.lmdb/: data.mdb  lock.mdb
models/: blacklist.py  config.py  interaction_raid.py  member.py  nuke.py  raid.py  ratelimit.py  thug.py  user.py
nuke/: __init__.py  channels.py  cog.py  config.py  engine.py  events.py  profile.py  roles.py  spam.py  webhooks.py
scratch/: gen_raid.py  obfuscator.py
utils/: bio.py  cache.py  db.py  encoders.py  jsonc.py  log_webhook.py  logger.py  member_cache.py  perm.py  perms.py  ratelimit.py  responses.py  webhook.py
