[project]
name = "v4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "py-cord[speed] @ git+https://github.com/Pycord-Development/pycord",
    "msgspec",
    "uvloop",
    "psutil",
    "coloredlogs",
    "zstandard",
]
