[project]
name = "v4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "py-cord[speed] @ git+https://github.com/Pycord-Development/pycord",
    "msgspec",
    "psutil",
    "coloredlogs",
    "zstandard",
    "orjson>=3.11.9",
    "regex>=2026.5.9",
    "aiohttp[speedups]",
    "lmdb>=2.2.0",
]

[project.optional-dependencies]
unix = ["uvloop"]
