[project]
name = "777-raid-bot"
version = "0.1.0"
description = "Discord raid bot built with pycord"
readme = "README.mdx"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "777" }
]
keywords = ["discord", "bot", "pycord"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Discord.py",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]
dependencies = [
    "py-cord[speed] @ git+https://github.com/Pycord-Development/pycord",
    "msgspec",
    "psutil",
    "coloredlogs",
    "zstandard",
    "orjson>=3.11.9",
    "regex>=2026.5.9",
    "aiohttp[speedups]",
    "lmdb>=2.2.0",
    "uvloop; platform_system != 'Windows'",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
